--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,8 +13,8 @@
     </header>
     <nav>
         <ul>
-            <li>https://www.byui.edu/>BYU_Idaho</li>
-            <li>https://www.churchofjesuschrist.org/?lang=eng>The Church</li>
+            <li><a href="https://www.byui.edu">BYU_Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church</a></li>
         </ul>
     </nav>
     <main>
