--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -13,7 +13,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="https://www.byui.edu/">BYU_Idaho</a></li>
+            <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
             <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church</a></li>
         </ul>
     </nav>
