--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -9,24 +9,24 @@
 </head>
 <body>
     <header>
-        <h1>"A Holy Grail Layout Example"</h1>
+        <h1>A Holy Grail Layout Example</h1>
     </header>
     <nav>
         <ul>
             <li><a href="https://www.byui.edu/">BYU-Idaho</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church of Jesus Christ</a></li>
         </ul>
     </nav>
     <main>
         <section>
             <article>
-                <h2>"Article 1"</h2>
+                <h2>Article 1</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, tenetur.</p>
             </article>
         </section>
         <section>
             <article>
-                <h2>"Article 2"</h2>
+                <h2>Article 2</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate, molestiae?</p>
             </article>
         </section>
