--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Jacquelyn Kulmus | WDD 130</title>
-    </head>
-    <link rel="stylesheet" href="styles/styles.css">
+    </head><link rel="stylesheet" href="styles/styles.css">
     <body>
         <header>
             <nav>
