--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head><link href="styles/style.css" rel="stylesheet" />
+    <head>
+        <link href="styles/style.css" rel="stylesheet" />
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Jacquelyn Kulmus | WDD 130</title>
