--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
-    <head> <link href="styles/style.css" rel="stylesheet" />
+    <head>
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
         <title>Jacquelyn Kulmus | WDD 130</title>
+    </head>
+    <head>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
         <header>
