--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
     <head>
         <meta charset="utf-8">
         <meta name="viewpoint" content="width=device-width,initial-scale=1.0">
@@ -21,7 +22,8 @@
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.</p>
         </main>
         <footer>
-            <p>&copy; Jacquelyn Kulmus Richland, Washington</p>
+            <p>&copy;2024 Jacquelyn Kulmus Richland, Washington</p>
         </footer>
     </body>
+    
     </html>
