--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale1.0">
         <title>Jacquelyn Kulmus | WDD 130</title>
+        <meta name="description" content="Jacquelyn Kulmus's BYU-Idaho WDD 130 course home page">
+        <meta name="author" content="Jacquelyn Kulmus">
+
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     
@@ -21,6 +24,11 @@
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.</p>
         </main>
+        <aside>
+            <h2>Washington</h2>
+            <img src="images/washington.jpg.webp" alt="Washington State">
+            <p>"Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.</p>
+        </aside>
         <footer>
             <p>&copy; 2024 Jacquelyn Kulmus Richland, Washington</p>
         </footer>
