--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <aside>
             <h2>Washington</h2>
             <img src="images/washington.jpg.webp" alt="Washington State">
-            <p>"Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.</p>
+            <p>Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.</p>
         </aside>
         <footer>
             <p>&copy; 2024 Jacquelyn Kulmus Richland, Washington</p>
