--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -34,7 +34,7 @@
                 <secondary-color>385C5D</secondary-color>
                 <accent1-color>6CA38E</accent1-color>
                 <accent2-color>C37C50</accent2-color>
-                <a href="https://coolors.co/6ca38e-c37c50-385c5d-dadccc"></a>"></a>
+                <a href="https://coolors.co/6ca38e-c37c50-385c5d-dadccc"></a>
             </p>
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
@@ -58,6 +58,6 @@
         </main>
     </body>
     <footer>
-        <p>&copy2024 Rafting Site Document Jacquelyn Kulmus</p>
+        <p>&copy 2024 Rafting Site Document Jacquelyn Kulmus</p>
     </footer>
 </html>
