--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -57,7 +57,7 @@
             <img src="" alt="" width="700">
         </main>
     </body>
-        <footer>
-            <p>&copy2024 Rafting Site Document Jacquelyn Kulmus</p>
+    <footer>
+        <p>&copy;2024 Rafting Site Document Jacquelyn Kulmus</p>
         </footer>
-</html>
+        </html>
