--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -58,6 +58,7 @@
         </main>
     </body>
     <footer>
-        <p>&copy;2024 Rafting Site Document Jacquelyn Kulmus</p>
+        <p>&copy;2024 Rafting Site Document Jacquelyn Kulmus
+        </p>
         </footer>
         </html>
