--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -30,11 +30,11 @@
 
             <h3>Color Palette</h3>
             <p>
-                <a href=""https://coolors.co/6ca38e-c37c50-385c5d-dadccc""></a>
                 <primary-color>DADCCC</primary-color>
                 <secondary-color>385C5D</secondary-color>
                 <accent1-color>6CA38E</accent1-color>
                 <accent2-color>C37C50</accent2-color>
+                <a href="https://coolors.co/6ca38e-c37c50-385c5d-dadccc"></a>
             </p>
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
