--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -48,9 +48,10 @@
 
             <h2>Wireframes</h2>
             <h3>Home Page Wireframe</h3>
-            <img src="" alt="" width="700">
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Reguired Home Page Wireframe Design" width="700">
             <h3>About Us Page Wireframe</h3>
-            <img src="" alt="" width="700">
+            <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wiregrame-aboutus-update.png" 
+            alt="About Us Page Wireframe Design" width="700">
         </main>
     <footer>
         <p>&copy; 2024 Rafting Site Document Jacquelyn Kulmus</p>
