--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             <h1>Jacquelyn Kulmus | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.</p>
+            <ul>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng"></a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng"></a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"></a></li>
+            </ul>
         </main>
         <aside>
             <h2>Washington</h2>
@@ -33,5 +38,6 @@
             <p>&copy; 2024 Jacquelyn Kulmus Richland, Washington</p>
         </footer>
     </body>
+    <!-- 10 May 2024 -->
 
     </html>
