--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.</p>
             <ul>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng"></a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng"></a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng"></a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
             </ul>
         </main>
         <aside>
