--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <h1>Jacquelyn Kulmus | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.</p>
-            <ul>
+            <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
             </ul>
         </main>
-        <aside>
+        <aside class="box">
             <h2>Washington</h2>
             <img src="images/washington.jpg.webp" alt="Washington State">
             <p>Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.</p>
