--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <main>
             <h1>Jacquelyn Kulmus | WDD 130</h1>
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
-            <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington. I am a mom of 3 awesome kids. My husband and I will be celebrating our 17 year anniversary in November. I love music, coloring, crafting, and pretty much all outdoor activities.</p>
+            <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
+                I am a mom of 3 awesome kids. My husband and I will be celebrating our 
+                17 year anniversary in November. I love music, coloring, crafting, and 
+                pretty much all outdoor activities.</p>
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
