--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
                 I am a mom of 3 awesome kids. My husband and I will be celebrating our 
                 17 year anniversary in November. I love music, coloring, crafting, and 
-                pretty much all outdoor activities.</p>
+                pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
+                one of my favorite places on earth. </p>
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
