--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <title>Jacquelyn Kulmus | WDD 130</title>
         <meta name="description" content="Jacquelyn Kulmus's BYU-Idaho WDD 130 course home page">
         <meta name="author" content="Jacquelyn Kulmus">
-
         <link rel="stylesheet" href="styles/styles.css">
     </head>
     
@@ -17,18 +16,20 @@
                 <a href="#">Home</a>
                 <a href="wwr">Rafting Website</a>
                 <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+                <a href="https://linkedin.com"></a>
+                <a href="https://www.facebook.com/bradyjacquelyn.kulmus/"></a>
             </nav>
         </header>
         <main>
             <h1>Jacquelyn Kulmus | WDD 130</h1>
-
             <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
 
             <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
                 I am a mom of 3 awesome kids. My husband and I will be celebrating our 
-                17 year anniversary in November. I love music, coloring, crafting, and 
+                17 year anniversary in November. I am currently serving as an advisory 
+                to the oldest Young Womans group in my ward. I love music, coloring, crafting, and 
                 pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
-                one of my favorite places on earth. </p>
+                one of my favorite places on earth. I find beauty and peace in nature.</p>
             <ul class="box">
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
