--- a/wwr/about.html
+++ b/wwr/about.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div class="hero">
-                <img src="" alt="">
+                <img src="images/hero.png" alt="Hero">
                 <h1>Rafting Company Name</h1>
                 <article>
                     <img src="" alt="">
