--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -19,7 +19,14 @@
             <h3>Purpose</h3>
             <p>Rafting is a fun and exciting adventure when done safetly. We know what to do, where to go, and we have the equipment you will need. </p>
             <h3>Audience</h3>
-            <p>If you are a lover of the outdoors and enjoy the water, you came to the right place. We offer guided tours for those looking to have a great experience while under the watchful eye of an expert. We also have water rafting supplies available for rent.</p>
+
+            <p>Target audience:
+                
+                Lovers of the outdoors that enjoy the water
+                Families/teams seeking guided tours for a great experience
+                People looking to rent rafting equipment
+                
+            </p>
 
             <h2>Branding</h2>
 
