--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
                 <img src="images/hero.png" alt="Hero">
                 <h1>Rafting Company Name</h1>
                 <article>
-                    <img src="" alt="">
+                    <img src="images/hero-article.png" alt="Happy Client">
                     <p>Hief ienifni idsi tidf i filkjsj...</p>
                 </article>
             </div>
