--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,11 +34,11 @@
             </section>
             <section>
                 <h2>Adventure Awaits You!</h2>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="images/wwr1.jpg" alt="White Water Rafting 1">
+                <img src="images/wwr2.jpg" alt="White Water Rafting 2">
+                <img src="images/wwr3.jpg" alt="White Water Rafting 3">
+                <img src="images/wwr4.jpg" alt="White Water Rafting 4">
+                <img src="images/wwr5.jpg" alt="White Water Rafting 5">
             </section>
         </main>
         <footer>
