--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,13 +45,13 @@
             <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="" alt="Facebook">
+                    <img src="images/facebook.svg" alt="Facebook">
                 </a>
                 <a href="https://twitter.com">
-                    <img src="" alt="Twitter">
+                    <img src="images/twitter.svg" alt="Twitter">
                 </a>
                 <a href="https://instagram.com">
-                    <img src="" alt="Instagram">
+                    <img src="images/instagram.svg" alt="Instagram">
                 </a>
             </nav>
         </footer>
