--- a/index.html
+++ b/index.html
@@ -20,22 +20,25 @@
                 <a href="https://www.facebook.com/bradyjacquelyn.kulmus/" target="_blank">Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Jacquelyn Kulmus | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
-
-            <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
-                I am a mom of 3 awesome kids. My husband and I will be celebrating our 
-                17 year anniversary in November. I am currently serving as an advisory 
-                to the oldest Young Womans group in my ward. I love music, coloring, crafting, and 
-                pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
-                one of my favorite places on earth. I find beauty and peace in nature.</p>
-            <ul class="box">
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
-            </ul>
-        </main>
+        <div class="grid">
+            <main>
+                <h1>Jacquelyn Kulmus | WDD 130</h1>
+                <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
+    
+                <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
+                    I am a mom of 3 awesome kids. My husband and I will be celebrating our 
+                    17 year anniversary in November. I am currently serving as an advisory 
+                    to the oldest Young Womans group in my ward. I love music, coloring, crafting, and 
+                    pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
+                    one of my favorite places on earth. I find beauty and peace in nature.</p>
+                <ul class="box">
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
+                    <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
+                </ul>
+            </main>
+        </div>
+        
         <aside class="box">
             <h2>Washington</h2>
             <img src="images/washington.jpg.webp" alt="Washington State">
