--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="description" content="Jacquelyn Kulmus's BYU-Idaho WDD 130 course home page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        <link rel="preconnect" href="">
+        <link rel="preconnect" href="">
     </head>
     
     <body>
