--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,10 +13,12 @@
         <header>
             <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
             <nav>
-                <a href="index.html"></a>
-                <a href="about.html"></a>
-                <a href="trips.html"></a>
-                <a href="contact.html"></a>
+                <ul class="navigation">
+                    <li><a href="index.html"></a></li>
+                    <li><a href="about.html"></a></li>
+                    <li><a href="trips.html"></a></li>
+                    <li><a href="contact.html"></a></li>
+                </ul>
             </nav>
         </header>
         <main>
