--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,21 +8,22 @@
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
-
     <body>
         <header>
-            <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
-            <h1>Rafting Company Name</h1>
+            <div class="logo">
+                <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
+            </div>
             <nav>
                 <ul class="navigation">
-                    <li><a href="index.html"></a></li>
-                    <li><a href="about.html"></a></li>
-                    <li><a href="trips.html"></a></li>
-                    <li><a href="contact.html"></a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <h1>Rafting Company Name</h1>
             <div class="hero">
                 <img src="images/hero.png" alt="Hero">
                 <article>
