--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Doc</title>
-        <meta name="description" content="">
+        <title>Rafting Company</title>
+        <meta name="description" content="About Us">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
     </head>
@@ -23,7 +23,7 @@
             </nav>
         </header>
         <main>
-            <h1>Rafting Company Name</h1>
+            <h1>White Water Rafting</h1>
             <div class="hero">
                 <img src="images/hero.png" alt="Hero">
                 <article>
@@ -48,14 +48,11 @@
             <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images/facebook.svg" alt="Facebook">
-                </a>
+                    <img src="images/facebook.svg" alt="Facebook"></a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.svg" alt="Twitter">
-                </a>
+                    <img src="images/twitter.svg" alt="Twitter"></a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram.svg" alt="Instagram">
-                </a>
+                    <img src="images/instagram.svg" alt="Instagram"></a>
             </nav>
         </footer>
     </body>
