--- a/wwr/about.html
+++ b/wwr/about.html
@@ -48,11 +48,11 @@
             <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
-                    <img src="images/facebook.svg" alt="Facebook"></a>
+                    <img src="images/facebook.png" alt="Facebook"></a>
                 <a href="https://twitter.com">
-                    <img src="images/twitter.svg" alt="Twitter"></a>
+                    <img src="images/twitter.png" alt="Twitter"></a>
                 <a href="https://instagram.com">
-                    <img src="images/instagram.svg" alt="Instagram"></a>
+                    <img src="images/instagram.png" alt="Instagram"></a>
             </nav>
         </footer>
     </body>
