--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,15 +45,17 @@
             </section>
         </main>
         <footer>
-            <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
-            <nav class="sociallinks">
-                <a href="https://facebook.com">
-                    <img src="images/facebook.png" alt="Facebook"></a>
-                <a href="https://twitter.com">
-                    <img src="images/twitter.png" alt="Twitter"></a>
-                <a href="https://instagram.com">
-                    <img src="images/instagram.png" alt="Instagram"></a>
-            </nav>
+            <div>
+                <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
+                <nav class="sociallinks">
+                    <a href="https://facebook.com">
+                        <img src="images/facebook.png" alt="Facebook"></a>
+                    <a href="https://twitter.com">
+                        <img src="images/twitter.png" alt="Twitter"></a>
+                    <a href="https://instagram.com">
+                        <img src="images/instagram.png" alt="Instagram"></a>
+                </nav>
+            </div>
         </footer>
     </body>
 </html>
