--- a/wwr/about.html
+++ b/wwr/about.html
@@ -45,7 +45,7 @@
             </section>
         </main>
         <footer>
-            <div>
+            <div class="footer">
                 <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
                 <nav class="sociallinks">
                     <a href="https://facebook.com">
