--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -42,8 +42,13 @@
             </p>
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
+            <p>
+                <a href=""></a>
+            </p>
             <h4>Normal Text/Paragraph Example Font</h4>
-            <p></p>
+            <p>
+                <a href=""></a>
+            </p>
             <h4>Colored Callout Example Font</h4>
             <p></p>
             <h3>Navigation</h3>
