--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -37,9 +37,11 @@
             <h2>Style Guide</h2>
 
             <h3>Color Palette</h3>
-            <p>
-                <a href="https://coolors.co/6ca38e-c37c50-385c5d-dadccc"></a>
-            </p>
+            
+                <!-- Coolors Palette Widget -->
+                <script src="https://coolors.co/palette-widget/widget.js"></script>
+                <script data-id="03490226226259838">new CoolorsPaletteWidget("03490226226259838", ["6ca38e","c37c50","385c5d","dadccc"],"Rafting Site Palette"); </script>
+
             <h3>Typography</h3>
             <h4>Headings Example Font</h4>
             <p>
