--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,59 +3,88 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>White Water Rafting Company | About Us</title>
-        <meta name="description" content="About Us">
+        <title>About Us | Dry Oar Rafting</title>
+        <meta name="description" content="About Us page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
+        <style type="text/css" id="tts-styles">
+            [data-tts-block-id].tts-active {background : rgb(206, 225, 255, 0.9) !important ;}
+            [data-tts-sentence-id].tts-active {background : rgb(0, 89, 191, 0.7) !important ;}
+        </style>
     </head>
     <body>
         <header>
-            <div class="logo">
-                <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
-            </div>
+            <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
             <nav>
-                <ul class="navigation">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
             </nav>
         </header>
         <main>
-            <h1>White Water Rafting</h1>
             <div class="hero">
-                <img src="images/hero.png" alt="Hero">
-                <article>
-                    <img src="images/hero-article.png" alt="Happy Client">
-                    <p>Hief ienifni idsi tidf i filkjsj...</p>
+                <img src="images/hero.png" alt="Hero Image">
+                <h1 class="abs-heading1"White Water Rafting Co></h1>
+                <article class="abs-article">
+                    <img src="images/hero-article.png" alt="happy client">
+                    <p>
+                        "Hief ienifni idsi tidf i filkjsj kjhgdj
+                        hddf kjyui fghdd sgfuj hkjuk hjghgd.
+                    </p>
                 </article>
             </div>
-            <section>
+            <section class="history">
                 <h2>History</h2>
-                <p>kljfdkld djkfjl jfiel n fowenlk...</p>
+                <p>kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
+                    dhwj kjsdf owjdhts skjthn skjdf.
+                </p>
+                <img src="" alt="">
+                <p>
+                    "kjdfh e jwknkjf kjdfw kjbs ejktkksb. asjkfhejht skjd skjeb
+                    sdjfh.dh fjdhs fhskje siej ksjethhs."
+                </p>
             </section>
-            <section>
+            <section class="adventures">
                 <h2>Adventure Awaits You!</h2>
-                <img src="images/wwr1.jpg" alt="White Water Rafting 1">
-                <img src="images/wwr2.jpg" alt="White Water Rafting 2">
-                <img src="images/wwr3.jpg" alt="White Water Rafting 3">
-                <img src="images/wwr4.jpg" alt="White Water Rafting 4">
-                <img src="images/wwr5.jpg" alt="White Water Rafting 5">
+                <figure>
+                    <img src="images/wwr1.jpg" alt="White Water Rafting 1">
+                    <figcaption>Discrip</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/wwr2.jpg" alt="White Water Rafting 2">
+                    <figcaption>Disc</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/wwr3.jpg" alt="White Water Rafting 3">
+                    <figcaption>Disc</figcaption>
+                </figure>                
+                <figure>
+                    <img src="images/wwr4.jpg" alt="White Water Rafting 4">
+                    <figcaption>Dis</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/wwr5.jpg" alt="White Water Rafting 5">
+                    <figcaption>Dis</figcaption>
+                </figure>
+                
             </section>
         </main>
         <footer>
-            <div class="footer">
-                <p>&copy; 2024 | Rafting Company | Jacquelyn Kulmus</p>
-                <nav class="sociallinks">
-                    <a href="https://facebook.com">
-                        <img src="images/facebook.png" alt="Facebook"></a>
-                    <a href="https://twitter.com">
-                        <img src="images/twitter.png" alt="Twitter"></a>
-                    <a href="https://instagram.com">
-                        <img src="images/instagram.png" alt="Instagram"></a>
+            <p>
+                "&copy; "
+                <span id="demo">2024</span>
+                "White Water Rafting Co" | Jacquelyn Kulmus
+            </p>
+            <a href="#open-modal" class="footer-menu">Wirefram</a>
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.png" alt="Facebook"></a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.png" alt="Twitter"></a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.png" alt="Instagram"></a>
                 </nav>
-            </div>
         </footer>
     </body>
 </html>
