--- a/wwr/about.html
+++ b/wwr/about.html
@@ -72,9 +72,9 @@
         </main>
         <footer>
             <p>
-                "&copy; "
+                &copy; 
                 <span id="demo">2024</span>
-                "White Water Rafting Co" | Jacquelyn Kulmus
+                White Water Rafting Co | Jacquelyn Kulmus
             </p>
             <a href="#open-modal" class="footer-menu">Wirefram</a>
             <nav class="sociallinks">
