--- a/wwr/about.html
+++ b/wwr/about.html
@@ -49,23 +49,23 @@
                 <h2>Adventure Awaits You!</h2>
                 <figure>
                     <img src="images/wwr1.jpg" alt="White Water Rafting 1">
-                    <figcaption>Discrip</figcaption>
+                    <figcaption>A Big One</figcaption>
                 </figure>
                 <figure>
                     <img src="images/wwr2.jpg" alt="White Water Rafting 2">
-                    <figcaption>Disc</figcaption>
+                    <figcaption>Having Fun</figcaption>
                 </figure>
                 <figure>
                     <img src="images/wwr3.jpg" alt="White Water Rafting 3">
-                    <figcaption>Disc</figcaption>
+                    <figcaption>Working Together</figcaption>
                 </figure>                
                 <figure>
                     <img src="images/wwr4.jpg" alt="White Water Rafting 4">
-                    <figcaption>Dis</figcaption>
+                    <figcaption>A Full Load</figcaption>
                 </figure>
                 <figure>
                     <img src="images/wwr5.jpg" alt="White Water Rafting 5">
-                    <figcaption>Dis</figcaption>
+                    <figcaption>Beautiful River</figcaption>
                 </figure>
                 
             </section>
