--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Us | Dry Oar Rafting</title>
+        <title>About Us | White Water Rafting Co</title>
         <meta name="description" content="About Us page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
@@ -21,7 +21,7 @@
         <main>
             <div class="hero">
                 <img src="images/hero.png" alt="Hero Image">
-                <h1 class="abs-heading1"White Water Rafting Co></h1>
+                <h1 class="abs-heading1">White Water Rafting Co</h1>
                 <article class="abs-article">
                     <img src="images/hero-article.png" alt="happy client">
                     <p>
