--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
         <meta name="description" content="Contact Us page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
+        <style type="text/css" id="tts-styles">
+            [data-tts-block-id].tts-active {background : rgb(206, 225, 255, 0.9) !important ;} [data-tts-sentence-id].tts-active {background : rgb(0, 89, 191, 0.7) !important ;}
+        </style>
     </head>
     <body>
         <header>
