--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                     17 year anniversary in November. I am currently serving as an advisory 
                     to the oldest Young Womans group in my ward. I love music, coloring, crafting, and 
                     pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
-                    one of my favorite places on earth. I find beauty and peace in nature.</p>
+                    one of my favorite places on earth. I find beauty and peace in nature.
+                </p>
+                <h2>A few of my favoriate temples</h2>
                 <ul class="box">
                     <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
                     <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
@@ -45,9 +47,12 @@
         </div>
     
         <footer>
-            <p>&copy; 2024 Jacquelyn Kulmus Richland, Washington</p>
+            <p>
+                &copy; 
+                <span id="year"2024></span>
+                "Jacquelyn Kulmus" Richland, Washington</p>
         </footer>
     </body>
-    <!-- 18 May 2024 -->
+    <!-- 22 May 2024 -->
 
     </html>
