--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             <main>
                 <h1>Jacquelyn Kulmus | WDD 130</h1>
                 <img src="images/profile.jpg" alt="Hello, my name is Jacquelyn Kulmus" width="200">
-    
                 <p>Hello! My name is Jacquelyn Kulmus and I am from Richland, Washington.
                     I am a mom of 3 awesome kids. My husband and I will be celebrating our 
                     17 year anniversary in November. I am currently serving as an advisory 
@@ -32,27 +31,28 @@
                     pretty much all outdoor activities. Hiking through Bryce Canyon, Utah is 
                     one of my favorite places on earth. I find beauty and peace in nature.
                 </p>
-                <h2>A few of my favoriate temples</h2>
-                <ul class="box">
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
-                    <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
-                </ul>
+                <div class="text-2">
+                    <h2>A few of my favoriate temples</h2>
+                    <ul class="box">
+                        <li><a href="https://www.churchofjesuschrist.org/temples/details/oakland-california-temple?lang=eng" target="_blank">Oakland California Temple</a></li>
+                        <li><a href="https://www.churchofjesuschrist.org/temples/details/columbia-river-washington-temple?lang=eng" target="_blank">Columbia River Washington Temple</a></li>
+                        <li><a href="https://www.churchofjesuschrist.org/temples/details/portland-oregon-temple?lang=eng" target="_blank">Portland Oregon Temple</a></li>
+                    </ul>
+                </div>
             </main>
             <aside class="box">
                 <h2>Washington</h2>
                 <img src="images/washington.jpg.webp" alt="Washington State">
-                <p>Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.</p>
+                <p>
+                    Washinton State is located on the west coast of the United States. It was actually named after the first president, George Washington. Even though Washington is known as 'The Evergreen State' there are many desert type areas near the border of Washington and Oregon. There are many beautiful mountains and lakes all over the state. Washington is also the leading producer of apples in the United States.
+                </p>
             </aside>
-        </div>
-    
+        </div>  
         <footer>
             <p>
-                &copy; 
-                <span id="year"2024></span>
-                "Jacquelyn Kulmus" Richland, Washington</p>
+                <span>&copy; 2024 Jacquelyn Kulmus Richland, Washington</span>
+            </p>
         </footer>
     </body>
-    <!-- 22 May 2024 -->
-
+    <!-- 18 May 2024 -->
     </html>
