--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jacquelyn Kulmus | HTML and CSS Quiz</title>
+    <meta name="description" content="HTML and CSS Quiz">
+    <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/quiz.css">
 </head>
 <body>
