--- a/quiz.html
+++ b/quiz.html
@@ -32,6 +32,7 @@
             <label for="q4">Question 4: Integer answer</label>
             <input type="number" id="q4" name="q4" required>
         </div>
+        <button type="submit">Submit Quiz</button>
     </form>
 </body>
 </html>
