--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -3,32 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | HTML Form - User Poll</title>
+    <title>WDD 130 | Jacquelyn Kulmus | HTML Form - User Poll</title>
+    <meta name="description" content="This is the html form-user poll assignment">
+    <meta name="author" content="Jacquelyn Kulmus">
     <link rel="stylesheet" href="styles/poll-form.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poetsen+One&display=swap');
+        [data-tts-block-id].tts-active {background : rgb(206, 225, 255, 0.9) !important ;}
+        [data-tts-sentence-id].tts-active {background : rgb(0, 89, 191, 0.7) !important ;}
     </style>
 </head>
 <body>
     <header>
-        <h1>WDD 130 | Jacquelyn Kulmus | HTML Form - User Poll</h1>
+        <h1>WDD 130 | HTML Form - User Poll</h1>
     </header>
     <main>
         <form>
             <fieldset>
                 <legend>Contact Information</legend>
-                <div class="form-item column2">
+                <div class="form-items column2">
                     <label for="fullname">Full Name:</label>
                     <input type="text" id="fullname" name="fullname">
                 </div>
-                <div class="form-item column2">
+                <div class="form-items column2">
                     <label for="useremail">Email:</label>
                     <input type="email" id="useremail" name="useremail">
                 </div>
             </fieldset>
             <fieldset>
                 <legend>Questions</legend>
-                <div class="form-item column1">
+                <div class="form-items column1">
                     <label for="browser">What is your favorite internet browser?</label>
                     <select id="browser" name="browser">
                         <option value="chrome">Chrome</option>
@@ -39,22 +42,20 @@
                         <option value="other">Other</option>
                     </select>
                 </div>
-                <div class="form-item column1">
+                <div class="form-items column1">
                     <label for="pet">Do you have a household pet?</label>
                     <input type="checkbox" id="pet" name="pet">
                 </div>
-                <div class="form-item">
+                <div class="form-items">
                     <label for="feedback">List the places you have lived:</label>
-                    <textarea id="feedback" name="feedback" rows="4" placeholder="Stillwater Florida, Amsterdam Netherlands, Tibuktu Mali"></textarea>
+                    <textarea id="feedback" name="feedback" rows="4" placeholder="Richland Washington, Benton City Washington, Hermiston Oregon, Bend Oregon, Oakdale California"></textarea>
                 </div>
             </fieldset>
-            <fieldset>
-                <button type="submit">Submit Poll</button>
-            </fieldset>
+            <button type="submit">Submit Poll</button>
         </form>
     </main>
     <footer>
-        <p>&copy; | HTML Form - User Poll Activity | Jacquelyn Kulmus</p>
+        <p>&copy; | Jacquelyn Kulmus | HTML Form - User Poll</p>
     </footer>
 </body>
 </html>
