--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Contact Us | White Water Rafting Co</title>
-        <meta name="description" content="Contact Us page">
+        <title>About Us | White Water Rafting Co</title>
+        <meta name="description" content="About Us page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
         <style type="text/css" id="tts-styles">
@@ -12,6 +12,15 @@
         </style>
     </head>
     <body>
+        <header>
+            <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="trips.html">Trips</a>
+                <a href="contact.html">Contact Us</a>
+            </nav>
+        </header>
         <main>
             <div class="hero">
                 <img src="images/hero.png" alt="Hero Image">
