--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>About Us | White Water Rafting Co</title>
-        <meta name="description" content="About Us page">
+        <title>Contact Us | White Water Rafting Co</title>
+        <meta name="description" content="Contact Us page">
         <meta name="author" content="Jacquelyn Kulmus">
         <link rel="stylesheet" href="styles/rafting.css">
         <style type="text/css" id="tts-styles">
