--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,9 @@
     </head>
     <body>
         <header>
-            <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
+            <div class="logo">
+                <img src="images/river-rafting-logo.png" alt="Rafting Site Logo">
+            </div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About Us</a>
