--- a/wwr/about.html
+++ b/wwr/about.html
@@ -37,7 +37,7 @@
             <p>kljfdkld djkfjl jfiel n fowenlk dkjh hwuhej jdfhk.
                 dhwj kjsdf owjdhts skjthn skjdf.
             </p>
-            <img src="" alt="">
+            <img src="images/history.jpg" alt="History">
             <p>
                 "kjdfh e jwknkjf kjdfw kjbs ejktkksb. asjkfhejht skjd skjeb
                 sdjfh.dh fjdhs fhskje siej ksjethhs."
